--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import './varibles.scss';
 @import './utils.scss';
 @import './menu.scss';
-@import './HomeTextConatiner.scss';
+@import './homeTextConatiner.scss';
+@import './search.scss';
