--- a/src/styles/varibles.scss
+++ b/src/styles/varibles.scss
@@ -1,4 +1,7 @@
 $boxShadowColor: #565656;
-$greyLight: #b3b3b3;
+$greyLight: #e5e5e5;
+$greyText: #999999;
 $green: #58ac00;
 $green-hover: #459900;
+$red: #B71C1C;
+$yellow: #FFEA00;
