--- a/src/styles/HomeTextConatiner.scss
+++ b/src/styles/HomeTextConatiner.scss
@@ -6,6 +6,8 @@
     background: white;
     margin: 50px auto;
     box-shadow: 3px 6px 30px -5px $boxShadowColor;
+    z-index: 99;
+    position: relative;
     h3 {
         margin: 0px 0px 20px;
         font-weight: 800;
@@ -25,7 +27,7 @@
             font-weight: 800;
             font-size: 19px;
             display: inline-block;
-            color: $greyLight;
+            color: $greyText;
             img {
                 margin-top: -2px;
                 margin-left: 10px;
