--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,5 +1,7 @@
 .menu-container {
     margin-top: 20px;
+    z-index: 99;
+    position: relative;
     .menu-list {
         margin: 0px;
         padding: 0px;
