--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -27,10 +27,16 @@
             height: 100%;
             box-sizing: border-box;
             padding: 0px 20px;
-            a {
+            button {
                 color: $green;
                 font-weight: 800;
                 margin: 0px 2px;
+                background: none;
+                border: none;
+                padding: 0px;
+                line-height: 1;
+                font-family: 'Roboto';
+                outline: none;
             }
         }
     }
