--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -87,6 +87,9 @@
                     color: black;
                     cursor: pointer;
                     padding: 0px 5px;
+                    &:hover {
+                        color: #fff;
+                    }
                 }
             }
             & > li > a {
