--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -28,6 +28,7 @@ body {
     left: 0px;
     width: 100%;
     height: 49.739vw;
+    z-index: -1;
 }
 #tm-main {
     margin: 0px;
@@ -43,6 +44,20 @@ body {
 .content-container {
     max-width: 1200px;
     margin: 0px auto;
-    z-index: 99;
     position: relative;
+    width: 98%;
+}
+.tm-header-react .content-container {
+    display: flex;
+    justify-content: space-between;
+}
+.toggle-mobile-menu {
+    background: none;
+    border: none;
+}
+.toggle-mobile-menu:hover,
+.toggle-mobile-menu:focus,
+.toggle-mobile-menu:active {
+    background: none;
+    border: none;
 }
