--- a/src/styles/envoy.scss
+++ b/src/styles/envoy.scss
@@ -13,6 +13,7 @@
         .envoy-image-container {
             margin-right: 60px;
             min-width: 280px;
+            max-width: 600px;
         }
     }
 }
