--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,131 +1,195 @@
 .danger {
-    background: $red;
+  background: $red;
 }
 .envoy-list {
+  display: flex;
+  box-sizing: border-box;
+  margin: 30px auto 50px;
+  position: relative;
+  border: 1px solid #e5e5e5;
+  padding: 30px 20px 20px;
+  background: white;
+  flex-wrap: wrap;
+  & > h3 {
+    position: absolute;
+    top: -30px;
+    left: calc(50% - 20px);
+    padding: 5px;
     display: flex;
+    min-width: 50px;
+    width: auto;
+    height: 50px;
+    background: $green;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    border-radius: 50px;
+    font-weight: 600;
+    &.danger {
+      background: $red;
+    }
+    &.long-title {
+      font-size: 18px;
+      left: 5%;
+      width: 90%;
+      text-align: center;
+      padding: 0px;
+      top: -25px;
+    }
+  }
+  .envoy-item-list {
+    min-width: calc(33.33% - 20px);
+    display: flex;
+    margin: 10px;
     box-sizing: border-box;
-    margin: 30px auto 50px;
-    position: relative;
-    border: 1px solid #e5e5e5;
-    padding: 30px 20px 20px;
-    background: white;
-    flex-wrap: wrap;
-    & > h3 {
-        position: absolute;
-        top: -30px;
-        left: calc(50% - 20px);
-        padding: 5px;
-        display: flex;
-        min-width: 50px;
-        width: auto;
-        height: 50px;
-        background: $green;
-        justify-content: center;
-        align-items: center;
-        color: #fff;
-        border-radius: 50px;
+    border: 1px solid $greyLight;
+    max-height: 110px;
+    transition: all 0.2s cubic-bezier(0.31, 0.74, 0.29, 0.93);
+    box-shadow: 0px 0px 0px -6px $boxShadowColor;
+    &:hover {
+      box-shadow: 0px 0px 15px -6px $boxShadowColor;
+    }
+    .envoy-image {
+      width: 110px;
+      img {
+        height: 100%;
+        object-fit: cover;
+        width: 100%;
+      }
+    }
+    .envoy-content {
+      width: calc(100% - 110px);
+      position: relative;
+      box-sizing: border-box;
+      padding: 10px;
+      h3 {
+        font-size: 17px;
         font-weight: 600;
-        &.danger {
-            background: $red;
-        }
-        &.long-title {
-            font-size: 18px;
-            left: 5%;
-            width: 90%;
-            text-align: center;
-            padding: 0px;
-            top: -25px;
-        }
-    }
-    .envoy-item-list {
-        min-width: calc(33.33% - 20px);
+        line-height: normal;
+      }
+      .envoy-points {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
         display: flex;
-        margin: 10px;
-        box-sizing: border-box;
-        border: 1px solid $greyLight;
-        max-height: 110px;
-        transition: all .2s cubic-bezier(.31,.74,.29,.93);
-        box-shadow: 0px 0px 0px -6px $boxShadowColor;
-        &:hover {
-            box-shadow: 0px 0px 15px -6px $boxShadowColor;
+        align-items: center;
+        justify-content: center;
+        img {
+          width: 40px;
         }
-        .envoy-image {
-            width: 110px;
-            img {
-                height: 100%;
-                object-fit: cover;
-                width: 100%;
-            }
+        span {
+          display: block;
+          margin-right: 5px;
+          font-size: 25px;
+          font-weight: 900;
+          &.bad {
+            color: $red;
+          }
+          &.good {
+            color: $green;
+          }
+          &.medium {
+            color: $greyText;
+          }
         }
-        .envoy-content {
-            width: calc(100% - 110px);
-            position: relative;
-            box-sizing: border-box;
-            padding: 10px;
-            h3 {
-                font-size: 17px;
-                font-weight: 600;
-                line-height: normal;            
-            }
-            .envoy-points {
-                position: absolute;
-                bottom: 10px;
-                right: 10px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                img {
-                    width: 40px;
-                }
-                span {
-                    display: block;
-                    margin-right: 5px;
-                    font-size: 25px;
-                    font-weight: 900;
-                    &.bad {
-                        color: $red;
-                    }
-                    &.good {
-                        color: $green;
-                    }
-                    &.medium {
-                        color: $greyText;
-                    }
-                }
-            }
-            .envoy-party {
-                position: absolute;
-                bottom: 10px;
-                left: 10px;
-                display: block;
-                height: 40px;
-                line-height: 40px;
-                color: $greyText;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                max-width: 60%;
-                white-space: nowrap;
-            }
-        }
+      }
+      .envoy-party {
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        display: block;
+        height: 40px;
+        line-height: 40px;
+        color: $greyText;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 60%;
+        white-space: nowrap;
+      }
     }
+  }
 }
 .subpage-title {
-    margin: 30px auto;
-    font-size: 45px;
-    text-align: center;
+  margin: 30px auto;
+  font-size: 45px;
+  text-align: center;
 }
 .criterions-content,
 .contact-container {
-    border: 1px solid $greyLight;
-    padding: 30px;
-    background: white;
-    box-sizing: border-box;
-    margin-bottom: 40px;
+  border: 1px solid $greyLight;
+  padding: 30px;
+  background: white;
+  box-sizing: border-box;
+  margin-bottom: 40px;
 }
 .friend-list {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 .mobile-menu,
 .toggle-mobile-menu {
-    display: none;
+  display: none;
+}
+.react-autosuggest__container {
+  position: relative;
+}
+
+.react-autosuggest__input {
+  height: 30px;
+  padding: 10px 20px;
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  border: 1px solid #aaa;
+  border-radius: 4px;
+  width: 205px;
+  margin: 5px;
+}
+
+.react-autosuggest__input--focused {
+  outline: none;
+}
+
+.react-autosuggest__input--open {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.react-autosuggest__suggestions-container {
+  display: none;
+}
+
+.react-autosuggest__suggestions-container--open {
+  display: block;
+  position: absolute;
+  top: 51px;
+  width: 280px;
+  border: 1px solid #aaa;
+  background-color: #fff;
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  z-index: 2;
+}
+
+.react-autosuggest__suggestions-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 10px 20px;
+}
+
+.react-autosuggest__suggestion--highlighted {
+  background-color: #ddd;
+}
+.custom-location {
+    margin-top: 50px;
+    .subpage-title-2 {
+        margin: 10px 
+    }
 }
