--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -193,3 +193,110 @@
         margin: 10px 
     }
 }
+.questionare-form {
+  border: 1px solid $greyLight;
+  padding: 30px;
+  background: white;
+  box-sizing: border-box;
+  margin-bottom: 40px;
+  margin-top: 40px;
+  .questionare-top {
+    margin-bottom: 50px;
+    h1 {
+      text-align: center;
+      font-weight: 600;
+      margin-bottom: 0px;
+      .color {
+        color: $green;
+      }
+      & + p {
+        text-align: center;
+        margin: 0px;
+        padding: 0px;
+        color: #000;
+        font-size: 24px;
+      }
+    }
+  }
+  .questionare-content {
+    h2 {
+      font-size: 35px;
+      margin: 40px 0px 20px;
+      font-weight: 600;
+    }
+    .submit {
+      text-align: center;
+      button {
+        border: none;
+        font-size: 27px;
+        background: $green;
+        color: #fff;
+        padding: 8px 50px;
+        margin-right: 5px;
+        outline: none;
+        &:hover {
+          background: $green-hover;
+        }
+      }
+    }
+  }
+  .question {
+    margin-bottom: 10px;
+    label {
+      display: block;
+      cursor: default;
+      font-size: 20px;
+      line-height: normal;
+      color: #000;
+    }
+    .sublabel {
+      display: block;
+    }
+    .buttons {
+      margin: 5px 0px 25px;
+      button {
+        border: none;
+        font-size: 20px;
+        background: rgba(88, 172, 0, 0.8);
+        color: #fff;
+        padding: 8px 20px;
+        margin-right: 5px;
+        outline: none;
+        &:hover {
+          background: $green-hover;
+        }
+        &.selected {
+          background: $green-hover;
+        }
+      }
+    }
+    .see-more {
+      background: none;
+      border: none;
+      padding: 0px;
+      outline: none;
+      color: $green;
+    }
+    .more-content {
+      margin: 2px 0px 10px;
+      line-height: normal;
+      transition: all .1s linear;
+      max-height: 0px;
+      overflow: hidden;
+      opacity: 0;
+      visibility: hidden;
+      &.show {
+        max-height: 400px;
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+  }
+}
+.no-access {
+  margin: 30px 0px;
+  text-align: center;
+  background: #fff;
+  color: #000;
+  padding: 30px;
+}
