--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,14 @@
 .danger {
   background: $red;
 }
+.box {
+  border: 1px solid $greyLight;
+  padding: 30px;
+  background: white;
+  box-sizing: border-box;
+  margin-bottom: 40px;
+  margin-top: 40px;
+}
 .envoy-list {
   display: flex;
   box-sizing: border-box;
@@ -299,4 +307,11 @@
   background: #fff;
   color: #000;
   padding: 30px;
+}
+.table-title {
+  margin: 20px 6px -15px;
+  padding: 0px 0px 8px;
+  line-height: normal;
+  font-size: 24px;
+  border-bottom: 1px solid #000;
 }
