--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -315,3 +315,28 @@
   font-size: 24px;
   border-bottom: 1px solid #000;
 }
+#petition-form {
+  input {
+    margin: 5px 0px;
+    border: 1px solid #c7c7c7;
+    border-radius: 3px;
+    padding: 10px;
+  }
+  button {
+    border: none;
+    font-size: 20px;
+    background: rgba(88, 172, 0, 0.8);
+    color: #fff;
+    padding: 8px 20px;
+    margin-right: 15px 5px;
+    outline: none;
+    transition: all .2s ease-in-out;
+    &:hover {
+      background: $green-hover;
+    }
+  }
+}
+.sign-info {
+  font-size: 30px;
+  margin: 0px;
+}
