--- a/src/styles/HomeTextConatiner.scss
+++ b/src/styles/HomeTextConatiner.scss
@@ -1,5 +1,4 @@
 .home-text-container {
-    max-width: 860px;
     width: 98%;
     box-sizing: border-box;
     padding: 40px;
@@ -13,11 +12,11 @@
         font-weight: 800;
     }
     p {
-        margin: 0px;
+        margin: 15px 0px;
         padding: 0px;
         text-align: justify;
         color: black;
-        font-size: 16px;
+        font-size: 17px;
     }
     .criteria-link-container {
         text-align: right;
