--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -21,11 +21,12 @@
   & > h3 {
     position: absolute;
     top: -30px;
-    left: calc(50% - 20px);
+    left: calc(50% - 125px);
     padding: 5px;
     display: flex;
     min-width: 50px;
-    width: auto;
+    width: 250px;
+    max-width: 100%;
     height: 50px;
     background: $green;
     justify-content: center;
